tests/miniJava/pos/001083_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) { } else java = 0 ; } }
