tests/miniJava/neg/004543_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) { class return 0 ; } }
